--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,13 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# credential files
+creds.py
+etl/creds.py
+
+# private Tableau
+tableau/local/
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
